# osmoper

./: .gitignore  CMakeLists.txt  README.md  process_all.bat
CMakeModules/: FindOpenSim.cmake
config/: delp_tlem_config.ini  gait2392.osim
doc/: LowerExtremityMusclesTLEMandDelpModelsFomJose.xlsx  ViaPointsDelp2392vsMPF.xlsx  muscle_volumes_todo.txt
src/: CMakeLists.txt  CoordinateFrame.h  OpSiMoPer.cpp  OpSiMoPer.h  OpSiMoPerMain.cpp  common.h  main.cpp  string_tools.hpp
